# GameProgramming

./: CMakeLists.txt
Exercise4/Engine/Engine/: GameObject.cpp  GameObject.h
Exercise4/ExampleGame/: main.cpp
Exercise4/ExampleGame/Game/: AsteroidController.cpp  AsteroidController.h  ComponentController.cpp  ComponentController.h  LaserController.cpp  LaserController.h  PlayerController.cpp  PlayerController.h
Exercise4/ExampleGame/data/: asteroids.json
Exercise6/: README.md
Exercise6/Engine/: CMakeLists.txt
Exercise6/Engine/Engine/: ComponentFactory.cpp  GameObject.cpp  GameObject.h  MyEngine.cpp
Exercise6/ExampleGame/: CMakeLists.txt  main.cpp
Exercise6/ExampleGame/Game/: ComponentCamera.cpp  ComponentController.cpp  ComponentController.h  ComponentRendererMesh.cpp
Exercise6/ExampleGame/data/: scene.json
Exercise8/: README.md
Exercise8/Engine/: CMakeLists.txt
Exercise8/Engine/Engine/: DeserializationLib.h  MyEngine.cpp  MyEngine.h
Exercise8/Engine/Engine/Components/: ComponentPhysicsBody.cpp  ComponentPhysicsBody.h
Exercise8/ExampleGame/: CMakeLists.txt
Exercise8/ExampleGame/Game/: ComponentController.cpp  ComponentController.h  ComponentSpawner.cpp  ComponentSpawner.h
Exercise8/ExampleGame/data/: scene.json
SnakeGame/: CMakeLists.txt  ITUGames.h  README 2.md  README.md  a.out  config.h  item.cpp  item.h  main.cpp  player.cpp  player.h  position.h
